@@ -2,6 +2,7 @@
 
 = 5.2.0 - 2023-01-23 =
 * Add - New wcs_set_order_address() helper function to set an array of address fields on an order or subscription.
+* Add - Highlight subscriptions with overdue payment in list view with red icon & tooltip.
 * Fix - Edit, add, and list Subscription admin pages now work when HPOS is enabled.
 * Fix - Fixed issues where multiple subscription purchases wouldn't appear on the My Account > Subscriptions screen, on HPOS environments.
 * Fix - Refactor `WCS_Meta_Box_Subscription_Data::save` to support HPOS stores, fixing a PHP warning notice when updating an order via the Edit Order screen.
